[package]
name = "chatgpt-linux-app"
version = "0.1.1"
description = "Desktop client application for ChatGPT on Linux"
authors = ["noppomario"]
license = "MIT"
repository = "https://github.com/noppomario/chatgpt-linux-app"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "chatgpt_linux_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.1.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.4.0", features = [] }
tauri-plugin-log = "2.0.0"
